# rust-notify

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2024-10-04-114012_create_topics/: down.sql  up.sql
migrations/2024-10-16-062757_create_notifications/: down.sql  up.sql
migrations/2024-10-16-063036_topics_add_created_at/: down.sql  up.sql
src/: app.rs  errors.rs  main.rs  models.rs  repository.rs  routes.rs  schemas.rs  services.rs  utils.rs
src/cli/: arguments.rs
src/models/: notification.rs  topic.rs
src/repository/: database.rs  entities.rs  schema.rs  stores.rs
src/repository/entities/: notification_entity.rs  topic_entity.rs
src/repository/stores/: notification_store.rs  topic_store.rs
src/routes/: notification_routes.rs  topic_routes.rs
src/schemas/: error_schema.rs  notification_schema.rs  topic_schema.rs
src/services/: notification_service.rs  topic_service.rs
