[package]
name = "rust-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.17", features = ["derive"] }
diesel = { version = "2.2.4", default-features = false, features = ["postgres", "uuid"] }
dotenvy = "0.15.7"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"
